# cpp-library-template

./: CMakeLists.txt  README.md
scripts/: init_template.sh
tests/: tests.cpp
